codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_footer_note_wraps.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 40)"
---
                                        
  Select Approval Mode                  
                                        
› 1. Read Only ✓                        
     Codex can read files               
                                        
  Note: Use /setup-default-sandbox to   
  allow network access.                 
  ↑/↓ choose · enter confirm · esc back
